--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,20 @@
 {
   "dependencies": {
+    "async": "^3.2.6",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
+    "error": "^10.4.0",
     "express": "^5.1.0",
+    "express-async-handler": "^1.2.0",
+    "handler": "^0.1.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "node-cron": "^4.1.0",
     "node-mailer": "^0.1.1",
+    "nodemon": "^3.1.10",
     "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "@types/node": "^22.15.30"
   }
 }
