--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "handler": "^0.1.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
+    "multer": "^2.0.1",
     "node-cron": "^4.1.0",
     "node-mailer": "^0.1.1",
     "nodemon": "^3.1.10",
