--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,11 @@
     "nodemon": "^3.1.10",
     "typescript": "^5.8.3"
   },
+  "scripts": {
+    "start": "node index.ts",
+    "dev": "nodemon index.ts",
+    "build": "tsc"
+  },
   "devDependencies": {
     "@types/node": "^22.15.30"
   }
