--- a/server/package.json
+++ b/server/package.json
@@ -16,11 +16,14 @@
     "typescript": "^5.8.3"
   },
   "scripts": {
-    "start": "node index.ts",
-    "dev": "nodemon index.ts",
+    "start": "ts-node index.ts",
+    "dev": "nodemon --exec ts-node index.ts",
     "build": "tsc"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.13",
     "@types/node": "^22.15.30"
   }
 }
